--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,13 @@ html {
 }
 
 .background {
+    position:static;
     background-color: #119fdb;
-    padding: 0px 100px 0px 100px; /* top right booton left */
+    padding: 0px 100px -100px 100px; /* top right booton left */
     text-align: center;
     border-style: solid;
+    margin-bottom: 100px;
+    height: 130px;
 }
 
 #title1 {
@@ -25,6 +28,7 @@ html {
     margin-bottom: 10px;
     font-size: 30px;
     background-color: rgba(202, 199, 199, 0.795);
+    box-shadow: 2px 2px 8px 2px #aaa;
 }
 
 #input0 {
@@ -77,13 +81,33 @@ html {
 }
 
 #quadratic_formula {
-    position: relative;
-    top: 10px;
-    right: 150px;
+    position: absolute;
+    top: 70px;
+    left: 275px;
+    margin-bottom: -20px;
+    text-decoration: underline;
 }
 
 #pythagorean_theorem {
-    position: relative;
-    top: -23px;
-    right: -100px;
+    position: absolute;
+    top: 70px;
+    left: 500px;
+    margin-bottom: -10px;
+    text-decoration: underline;
+}
+
+#percentage {
+    position: absolute;
+    top: 70px;
+    right: 475px;
+    margin-bottom: 0px;
+    text-decoration: underline;
+}
+
+#logarithm {
+    position: absolute;
+    top: 70px;
+    right: 320px;
+    margin-bottom: 0px;
+    text-decoration: underline;
 }
