--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ html {
 }
 
 #title1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Patua One', cursive;
+    font-size: 50px;
     position: relative;
     text-align: center;
     height: 50px;
@@ -81,25 +82,31 @@ html {
 }
 
 #quadratic_formula {
+    font-family: 'Patua One', cursive;
+    font-size: 22px;
     position: absolute;
     top: 70px;
-    left: 275px;
+    left: 365px;
     margin-bottom: -20px;
     text-decoration: underline;
 }
 
 #pythagorean_theorem {
+    font-family: 'Patua One', cursive;
+    font-size: 22px;
     position: absolute;
     top: 70px;
-    left: 500px;
+    left: 597.5px;
     margin-bottom: -10px;
     text-decoration: underline;
 }
 
 #percentage {
+    font-family: 'Patua One', cursive;
+    font-size: 22px;
     position: absolute;
     top: 70px;
-    right: 475px;
+    right: 370px;
     margin-bottom: 0px;
     text-decoration: underline;
 }
